[package]
name = "usdshe"
version = "0.2.0"
edition = "2021"
authors = ["Joseph Livesey <jlivesey@gmail.com>"]
description = "A utility crate to easily retrieve USDC contract addresses for various blockchain networks."
readme = "README.md"
repository = "https://github.com/suchapalaver/usdshe"
license = "MIT"
keywords = ["usdc", "crypto", "blockchain", "alloy", "ethereum"]
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
alloy-chains = "0.2.2"
alloy-primitives = "1.4.1"
thiserror = "2.0"
